
    The tz library no longer mishandles leap seconds on platforms with
    unsigned time_t in time zones that lack ordinary transitions after 1970.

    The tz library is now thread-safe if compiled with THREAD_SAFE defined.
    Although not needed for tz's own applications, which are single-threaded,
    this supports POSIX better if the tz library is used in multithreaded apps.

    tzselect -c now uses a hybrid distance measure that works better
    in Africa.  (Thanks to Alan Barrett for noting the problem.)

    The C source code now ports to NetBSD when GCC_DEBUG_FLAGS is used,
    or when time_tz is defined.

    When HAVE_UTMPX_H is set the 'date' command now builds on systems
    whose <utmpx.h> file does not define WTMPX_FILE, and when setting
    the date it updates the wtmpx file if _PATH_WTMPX is defined.
    This affects GNU/Linux and similar systems.

    For easier maintenance later, some C code has been simplified
    and some lint has been removed.

  Changes affecting distribution tarballs

    The files checktab.awk and zoneinfo2tdf.pl are now distributed in
    the tzdata tarball instead of the tzcode tarball, since they help
    maintain the data.  The NEWS and Theory files are now also
    distributed in the tzdata tarball, as they're relevant for data.
    (Thanks to Alan Barrett for pointing this out.)  Also, the
    leapseconds.awk file is no longer distributed in the tzcode
    tarball, since it belongs in the tzdata tarball (where 2014f
    inadvertently also distributed it).

  Changes affecting documentation and commentary

    A new file CONTRIBUTING is distributed.  (Thanks to Tim Parenti for
    suggesting a CONTRIBUTING file, and to Walter Harms for debugging it.)

    The fields in Link lines have been renamed to be more descriptive
    and more like the parameters of 'ln'.  LINK-FROM has become TARGET,
    and LINK-TO has become LINK-NAME.

    tz-link.htm mentions Windows Runtime etc. (thanks to Matt Johnson)